--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/js-cookie": "^3.0.1",
     "@types/react-transition-group": "^1.1.8",
-    "bootstrap": "^5.1.3",
+    "axios": "^0.18.0",
     "crypto-js": "^4.1.1",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
